-Animations for CSS, HTML, JS logos -Animated little rocket -Started and re-formatted 'about me' -cleaned up & reformated code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/stars.js" defer></script>
+    <script src="js/logo.js" defer></script>
+    <script src="js/rocket.js" defer></script>
 </head>
 
 <body>
+<img id = "rocket" src="rocket.png" alt="rocket">
+<img id = "csslogo" class = "logo" src="csslogo.png" alt="css Logo">
+<img id = "htmllogo" class = "logo" src="htmllogo.png" alt="html Logo">
+<img id = "jslogo" class = "logo" src="jslogo.png" alt="js Logo">
 
 <div id = "top_bar">
 
@@ -28,7 +34,13 @@
 
 </div>
 <div id = "me_desc" class = "designer_div text">
-<h1 id = "header" class = "text">About Me!</h1>
+<h1 id = "header" class = "text">ABOUT ME</h1>
+    <p id = "under"> Owyn Neville - Information Technology </p>
+    <p id = "h_2"> Freshman - Michigan Technological University</p>
+    <p id = "main_text">
+
+
+    </p>
 
 </div>
 
