-Changed Location of images to clean it up -(shouldve) refactored all code to reflect change

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-<img id = "rocket" src="rocket.png" alt="rocket">
-<img id = "csslogo" class = "logo" src="csslogo.png" alt="css Logo">
-<img id = "htmllogo" class = "logo" src="htmllogo.png" alt="html Logo">
-<img id = "jslogo" class = "logo" src="jslogo.png" alt="js Logo">
+<img id = "rocket" src="images/rocket.png" alt="rocket">
+<img id = "csslogo" class = "logo" src="images/csslogo.png" alt="css Logo">
+<img id = "htmllogo" class = "logo" src="images/htmllogo.png" alt="html Logo">
+<img id = "jslogo" class = "logo" src="images/jslogo.png" alt="js Logo">
 
 <div id = "top_bar">
 
@@ -45,7 +45,7 @@
 </div>
 
 <div id = "me_picture" class = "designer_div">
-    <img alt = "" class = "img_fit" src="IMG_3194.JPG">
+    <img alt = "" class = "img_fit" src="images/IMG_3194.JPG">
 </div>
 </body>
 
