--- a/index.html
+++ b/index.html
@@ -38,9 +38,27 @@
     <p id = "under"> Owyn Neville - Information Technology </p>
     <p id = "h_2"> Freshman - Michigan Technological University</p>
     <p id = "main_text">
-
-
+        Hello, i'm Owyn Neville, a freshman studying Information Technology at Michigan Tech! I have loved
+        all things technology since I got my first laptop at five years old. <br> <br> I love the hardware side of technology,
+        putting together computers, servers, and configuring them to work as I wanted is what I have done in my freetime since I was around 5-6 years old.
+        <br> <br>I also have experience in the software side of tech, with skills in:
     </p>
+    <ul id = "skills">
+        <li>HTML - Creating websites such as this, and other personal sites.</li>
+        <li>CSS - Continued usage with HTML and Javascript.</li>
+        <li>JS - Usage in front-end websites, but also with Node.JS for backend, and developing Discord bots.</li>
+        <li>C# - Used to make games with Unity Game Engine for fun.</li>
+        <li>Java - Learned in AP Computer Science, and in my college Programming class.</li>
+    </ul>
+    <p id = "main_text_lower" >
+
+    with results such as this website, and others linked in my projects section. I have used C# through Unity,
+    and Node.JS through developing Discord bots, one of which is also linked, and while hosting web servers off of my computer.
+    I am currently growing my expertise in front-end coding and design to broaden my knowledge and skills.
+    </p>
+
+
+
 
 </div>
 
