-Added buttons to 'resume', 'contact me', and 'projects' -changed way that the website handles mobile screens -bought domain, should auto update when pushed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <p id = "top_bar_name" class = "text">Owyn Neville</p>
 
     <div class = "box">
-        <div id = "projects" class = "box_child text">Projects</div>
-        <div id = "resume" class = "box_child text">Resumé</div>
-        <div id = "socials" class = "box_child text">Contact Me</div>
+        <div id = "projects" class = "box_child text">
+            <a href = "#">Projects</a>
+        </div>
+        <div id = "resume" class = "box_child text">
+            <a href = "#">Resumé</a>
+        </div>
+        <div id = "socials" class = "box_child text">
+            <a href = "#">Contact Me</a>
+        </div>
 
     </div>
 </div>
