--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <p id = "under"> Owyn Neville - Information Technology </p>
     <p id = "h_2"> Freshman - Michigan Technological University</p>
     <p id = "main_text">
-        Hello, i'm Owyn Neville, a freshman studying Information Technology <br>at Michigan Tech!  I have loved
-        all things technology since I got my first <br>laptop at five years old. <br> <br> I love the hardware side of technology,
+        Hello, i'm Owyn Neville, a freshman studying Information Technology at Michigan Tech! <br> I have loved
+        all things technology since I got my first laptop at five years old. <br> <br> I love the hardware side of technology,
         putting together computers, servers,<br> and configuring them to work as I wanted is what I have done in my freetime since <br>I was around 5-6 years old.
         <br> <br>I also have experience in the software side of tech, with skills in:
     </p>
