--- a/index.html
+++ b/index.html
@@ -70,6 +70,44 @@
 <div id = "me_picture" class = "designer_div">
     <img alt = "" class = "img_fit" src="images/IMG_3194.JPG">
 </div>
+
+
+<div id = "project_div" class = "flex_container">
+    <h1 id = "projects_text">Projects:</h1>
+    <div id ="project_1" class = "portfolio">
+
+        <img alt = "" class = "primg1" src="images/project_1.png">
+        <div class = "project_1_desc">
+            <h2 class = "pro_h">Personal Portfolio</h2>
+           <a href="https://github.com/GamrAlert/Owyn-Neville-Portfolio" target="_blank"> <button class = "github_button" >
+               <img alt = "" class = "github_icon" src = "images/github.png">
+           </button></a>
+        </div>
+
+    </div>
+
+    <div id ="project_2" class = "portfolio">
+        <img alt = "" class = "primg1" src="images/project_1.png">
+        <div class = "project_1_desc">
+            <h2 class = "pro_h">Discord Bot</h2>
+            <a href="https://github.com/GamrAlert/Nodejs-Discord-Api-11-Discord-Bot" target="_blank"> <button class = "github_button" >
+                <img alt = "" class = "github_icon" src = "images/github.png">
+            </button></a>
+        </div>
+    </div>
+
+    <div id ="project_3" class = "portfolio">
+        <img alt = "" class = "primg1" src="images/project_1.png">
+        <div class = "project_1_desc">
+            <h2 class = "pro_h">MTU Links</h2>
+            <a href="https://github.com/GamrAlert/mtu-links-web" target="_blank"> <button class = "github_button" >
+                <img alt = "" class = "github_icon" src = "images/github.png">
+            </button></a>
+        </div>
+    </div>
+
+</div>
+
 </body>
 
 </html>
