--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div id ="project_2" class = "portfolio">
-        <img alt = "" class = "primg1" src="images/project_1.png">
+        <img alt = "" class = "primg1" src="images/discordjs.png">
         <div class = "project_1_desc">
             <h2 class = "pro_h">Discord Bot</h2>
             <a href="https://github.com/GamrAlert/Nodejs-Discord-Api-11-Discord-Bot" target="_blank"> <button class = "github_button" >
@@ -97,7 +97,7 @@
     </div>
 
     <div id ="project_3" class = "portfolio">
-        <img alt = "" class = "primg1" src="images/project_1.png">
+        <img alt = "" class = "primg1" src="images/mtuweb.png">
         <div class = "project_1_desc">
             <h2 class = "pro_h">MTU Links</h2>
             <a href="https://github.com/GamrAlert/mtu-links-web" target="_blank"> <button class = "github_button" >
