-project button scrolls -resume button opens resume -project images and links -border-radius modifications -smoothed some minor issues

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/stars.js" defer></script>
     <script src="js/logo.js" defer></script>
     <script src="js/rocket.js" defer></script>
+    <script src="js/scroll.js" defer></script>
 </head>
 
 <body>
@@ -25,10 +26,10 @@
 
     <div class = "box">
         <div id = "projects" class = "box_child text">
-            <a href = "#">Projects</a>
+            <a id = "projects_button" href = "#">Projects</a>
         </div>
         <div id = "resume" class = "box_child text">
-            <a href = "#">Resumé</a>
+            <a href = "files/owyn_neville_resume.pdf" target="_blank">Resumé</a>
         </div>
         <div id = "socials" class = "box_child text">
             <a href = "#">Contact Me</a>
