-replaced discord bot project -new project descriptions -Todo list added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <img alt = "" class = "primg1" src="images/project_1.png">
         <div class = "project_1_desc">
             <h2 class = "pro_h">Personal Portfolio</h2>
+            <p class = "text_white">- Interactive background</p>
+            <p class = "text_white">- Constantly updated</p>
+            <p class = "text_white">- HTML/CSS + JS</p>
            <a href="https://github.com/GamrAlert/Owyn-Neville-Portfolio" target="_blank"> <button class = "github_button" >
                <img alt = "" class = "github_icon" src = "images/github.png">
            </button></a>
@@ -88,10 +91,12 @@
     </div>
 
     <div id ="project_2" class = "portfolio">
-        <img alt = "" class = "primg1" src="images/discordjs.png">
+        <img alt = "" class = "primg1" src="images/electron.png">
         <div class = "project_1_desc">
-            <h2 class = "pro_h">Discord Bot</h2>
-            <a href="https://github.com/GamrAlert/Nodejs-Discord-Api-11-Discord-Bot" target="_blank"> <button class = "github_button" >
+            <h2 class = "pro_h">To-Do List</h2>
+            <p style="color:white;">- Developed with ElectronJS</p>
+            <p style="color:white;">- Personally use the App</p>
+            <a href="https://github.com/GamrAlert/TO-DO-list-project" target="_blank"> <button class = "github_button" >
                 <img alt = "" class = "github_icon" src = "images/github.png">
             </button></a>
         </div>
@@ -101,6 +106,8 @@
         <img alt = "" class = "primg1" src="images/mtuweb.png">
         <div class = "project_1_desc">
             <h2 class = "pro_h">MTU Links</h2>
+            <p class = "text_white">- HTML/CSS + JS</p>
+            <p class = "text_white">- Personally use the App</p>
             <a href="https://github.com/GamrAlert/mtu-links-web" target="_blank"> <button class = "github_button" >
                 <img alt = "" class = "github_icon" src = "images/github.png">
             </button></a>
